--- a/public/spot.html
+++ b/public/spot.html
@@ -6,13 +6,13 @@
 	<script type="text/javascript">
 	swfobject.embedSWF("/spot_watcher.swf", "flashDiv", "953", "661", "10.0.0", "/expressInstall.swf");
 	</script>
-	<link rel="stylesheet" href="/stylesheets/blueprint/screen.css" type="text/css" media="screen, projection">
-	<link rel="stylesheet" href="/stylesheets/blueprint/print.css" type="text/css" media="print">
+	<link rel="stylesheet" href="/static/blueprint/screen.css" type="text/css" media="screen, projection">
+	<link rel="stylesheet" href="/static/blueprint/print.css" type="text/css" media="print">
 	<!--[if IE]>
-		<link rel="stylesheet" href="/stylesheets/blueprint/ie.css" type="text/css" media="screen, projection">
+		<link rel="stylesheet" href="/static/blueprint/ie.css" type="text/css" media="screen, projection">
 	<![endif]-->
-	<link rel="stylesheet" href="/stylesheets/blueprint/plugins/fancy-type/screen.css" type="text/css" media="screen, projection">
-	<link rel="stylesheet" href="/stylesheets/custom.css" type="text/css" media="screen, projection">
+	<link rel="stylesheet" href="/static/blueprint/plugins/fancy-type/screen.css" type="text/css" media="screen, projection">
+	<link rel="stylesheet" href="/static/custom.css" type="text/css" media="screen, projection">
 	<meta http-equiv="Content-Type" content="text/html; charset=utf-8">
 	<title>
 		Vision on Tap
@@ -39,7 +39,8 @@
 	<h3>FAQ</h3>
 	
 	<div class="span-12">
-		
+		<b>Email and SMS don't work.</b><br>
+		It's being fixed. We just had a server move and some things stopped working.
 		
 		<b>Am I being recorded?</b><br>
 		No. The video stream never leaves your computer.<br><br>
