--- a/public/idle.html
+++ b/public/idle.html
@@ -7,13 +7,13 @@
 	<script type="text/javascript">
 	swfobject.embedSWF("/idle.swf", "flashDiv", "752", "346", "9.0.0", "/expressInstall.swf");
 	</script>
-	<link rel="stylesheet" href="/stylesheets/blueprint/screen.css" type="text/css" media="screen, projection">
-	<link rel="stylesheet" href="/stylesheets/blueprint/print.css" type="text/css" media="print">
+	<link rel="stylesheet" href="/static/blueprint/screen.css" type="text/css" media="screen, projection">
+	<link rel="stylesheet" href="/static/blueprint/print.css" type="text/css" media="print">
 	<!--[if IE]>
-		<link rel="stylesheet" href="/stylesheets/blueprint/ie.css" type="text/css" media="screen, projection">
+		<link rel="stylesheet" href="/static/blueprint/ie.css" type="text/css" media="screen, projection">
 	<![endif]-->
-	<link rel="stylesheet" href="/stylesheets/blueprint/plugins/fancy-type/screen.css" type="text/css" media="screen, projection">
-	<link rel="stylesheet" href="/stylesheets/custom.css" type="text/css" media="screen, projection">
+	<link rel="stylesheet" href="/static/blueprint/plugins/fancy-type/screen.css" type="text/css" media="screen, projection">
+	<link rel="stylesheet" href="/static/custom.css" type="text/css" media="screen, projection">
 	<meta http-equiv="Content-Type" content="text/html; charset=utf-8">
 	<title>
 		Vision on Tap
