email signups work

--- a/public/spot.html
+++ b/public/spot.html
@@ -23,7 +23,7 @@
   <body>
 	<div class="container">
 		<div class="span-24 last">
-			<div class="statement title">Vision on Tap</div>
+			<div class="title large">Vision on Tap</div>
 		</div>
 		
 	<div class="span-24 last">
@@ -39,9 +39,6 @@
 	<h3>FAQ</h3>
 	
 	<div class="span-12">
-		<b>Email and SMS don't work.</b><br>
-		It's being fixed. We just had a server move and some things stopped working.
-		
 		<b>Am I being recorded?</b><br>
 		No. The video stream never leaves your computer.<br><br>
 		
@@ -91,12 +88,9 @@
 
   feedback_widget_options.display = "overlay";  
   feedback_widget_options.company = "vision_on_tap";
-  feedback_widget_options.placement = "left";
+  feedback_widget_options.placement = "right";
   feedback_widget_options.color = "#555";
   feedback_widget_options.style = "idea";
-  
-  
-  
   
   var feedback_widget = new GSFN.feedback_widget(feedback_widget_options);
 </script>
