--- a/public/spot.html
+++ b/public/spot.html
@@ -22,6 +22,9 @@
 </head>
   <body>
 	<div class="container">
+		<div class="prepend-top last">
+			
+		</div>
 		<div class="span-24 last">
 			<div class="title large">Vision on Tap</div>
 		</div>
